--- a/css/styleGrid.css
+++ b/css/styleGrid.css
@@ -5,6 +5,7 @@ body {
 }
 
 .calc {
+    margin: 10px;
     width: 400px;
     /* height: 500px; */
     background-color: rgb(67, 63, 63);
@@ -44,9 +45,6 @@ body {
 }
 
 .btn {
-    margin: 1px;
-    width: 98px;
-    height: 100px;
     display: flex;
     align-items: center;
     justify-content: center;
@@ -80,12 +78,15 @@ body {
     box-sizing: border-box;
 }
 
-.null {
-    width: 198px;
+.nullGrid {
+    grid-column: 1/3;
 }
 
 .calcGrid {
+    width: 100%;
+    height: 400px;
     display: grid;
-    grid-template-columns: repeat(4, 100px);
-    grid-template-rows: repeat(5, 80px);
+    grid-template-columns: repeat(4, 1fr);
+    grid-template-rows: repeat(5, 1fr);
+    gap: 2px;
 }
